[package]
name = "rle_morph"
version = "0.2.0"
authors = ["Luka Tadić <luka.tadic@fer.hr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.3.1"
image = { version = "0.23.2", default-features = false, features = ["png"] }
imageproc = "0.20.0"

[[bench]]
name = "dilate_bench"
harness = false

[[bench]]
name = "erode_bench"
harness = false

[[bench]]
name = "flip_bits"
harness = false
